# tripcom_cs_dialog_scraping

./: .gitignore  README.md  background.js  config.yaml  content-script.js  detail-page.js  gui.pyw  imx  imx.cmd  manifest.json  page-bridge.js  popup.html  popup.js  pyproject.toml  singlefile-runner.js  xlsx-exporter.js
.claude/: settings.local.json
docs/: AGENT_IMAGE_REFERENCE_GUIDE.md  HERMES_AGENT_RUNBOOK.md  auth_notes.md  ctrip_http_parameter_probe_2026-06-22_2026-06-28.md  field_mapping.md  interface_capture.md
docs/superpowers/plans/: 2026-06-29-ctrip-http-image-export-canonical.md  2026-06-29-ctrip-pure-http-request-mode.md  2026-06-30-image-index-entry.md  (+1 more)
icons/: generate-icons.js
im_archive_cli/: __init__.py  browser.py  cdp_plugin_controller.py  cdp_proxy_export.py  cli.py  collect.py  config.py  ctrip_http.py  detail_discovery.py  export_singlefile.py  export_structured.py  http_export.py  image_index.py  imx_cli.py  markdown_export.py  media.py  media_download.py  models.py  selftest.py  state.py  utils.py  xlsx_io.py
lib/singlefile/: single-file-core.js
scripts/: openclaw_login.sh  openclaw_setup.sh  openclaw_structured_export.sh
skills/ctrip-im-parser/: SKILL.md
skills/hermes-ctrip-im-archive/: SKILL.md
tests/: detail_page_dom_filter_test.js  test_cdp_controller.py  test_cdp_proxy_export.py  test_ctrip_http.py  test_ctrip_im_parser_scan.py  test_detail_discovery.py  test_http_export.py  test_image_index.py  test_imx_cli_state_flow.py  test_media.py  test_runbook_commands.py  test_state.py  test_xlsx_io.py
(+2 files in other folders)
